objects/Cohurt__c.object
<CustomObject>
    <fields>
        <fullName>First__c</fullName>
        <label>First</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MasterCase__c</fullName>
        <label>MasterCase</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cohurt (MasterCase)</relationshipLabel>
        <relationshipName>Cohurt1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cohurt</relationshipLabel>
        <relationshipName>Cohurt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cohurt</relationshipLabel>
        <relationshipName>Cohurt_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X11__c</fullName>
        <label>11</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X12__c</fullName>
        <label>12</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eighth__c</fullName>
        <label>eighth</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fifth__c</fullName>
        <label>fifth</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fourth__c</fullName>
        <label>fourth</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ninth__c</fullName>
        <label>ninth</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>second__c</fullName>
        <label>second</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>seventh__c</fullName>
        <label>seventh</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sixth__c</fullName>
        <label>sixth</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tenth__c</fullName>
        <label>tenth</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>third__c</fullName>
        <label>third</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Cohurt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Cohurt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cohurt</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>